specl/tree-sitter-specl/test/corpus/declarations.txt
================================================================================
Module declaration
================================================================================

module Test

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier)))

================================================================================
Constant declaration
================================================================================

module Test
const MAX: Nat

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (const_decl
    name: (identifier)
    type: (type_expr
      (primitive_type))))

================================================================================
Variable declaration
================================================================================

module Test
var count: Int

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (var_decl
    name: (identifier)
    type: (type_expr
      (primitive_type))))

================================================================================
Type declaration
================================================================================

module Test
type NodeId = 0..10

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (type_decl
    name: (identifier)
    type: (type_expr
      (range_type
        lo: (integer)
        hi: (integer)))))

================================================================================
Action declaration
================================================================================

module Test
action Inc() {
    require count < MAX
    count' == count + 1
}

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (action_decl
    name: (identifier)
    (param_list)
    (action_body
      (action_statement
        (require_stmt
          (expression
            (or_expr
              (and_expr
                (comparison_expr
                  (membership_expr
                    (additive_expr
                      (multiplicative_expr
                        (unary_expr
                          (postfix_expr
                            (primary_expr
                              (identifier)))))))
                  (membership_expr
                    (additive_expr
                      (multiplicative_expr
                        (unary_expr
                          (postfix_expr
                            (primary_expr
                              (identifier)))))))))))))
      (expression
        (or_expr
          (and_expr
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (primed_var
                            (identifier))))))))
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier)))))
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (integer))))))))))))))

================================================================================
Init declaration
================================================================================

module Test
init { count == 0 }

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (init_decl
    (block
      (expression
        (or_expr
          (and_expr
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier)))))))
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (integer))))))))))))))

================================================================================
Invariant declaration
================================================================================

module Test
invariant Bounded { count <= MAX }

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (invariant_decl
    name: (identifier)
    (block
      (expression
        (or_expr
          (and_expr
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier)))))))
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier))))))))))))))
